[package]
name = "kobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.10", features= ["client", "standard_framework", "voice"]}
tokio = {version="1", features = ["macros", "rt-multi-thread"]}
futures = "0.3.13"
dotenv = "0.15"
rand = {version="0.8", features = ["alloc"]}
thiserror = "1"
lazy_static = "1.4.0"
ron = "0.6.4"
songbird = {version="0.2", features= ["serenity-native", "gateway", "driver", "builtin-queue"]}
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"